fix write split chunk api